Fix Sonar issues and increase test coverage